@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "rsnapshot 1"
-.TH rsnapshot 1 "2005-02-02" "" ""
+.TH rsnapshot 1 "2005-03-21" "" ""
 .SH "NAME"
 rsnapshot \- remote filesystem snapshot utility
 .SH "SYNOPSIS"
@@ -865,6 +865,18 @@ Nicolas Kaiser <nikai@nikai.net>
 .Sp
 .RS 4
 \&\- Fixed typos in program and man page
+.RE
+.PP
+David Cantrell <david@cantrell.org.uk>
+.Sp
+.RS 4
+Wrote the rsnapshot-diff utility
+.RE
+.PP
+Chris Petersen \- \fBhttp://www.forevermore.net/\fR
+.Sp
+.RS 4
+Added cwrsync permanent-share support
 .RE
 .SH "COPYRIGHT"
 .IX Header "COPYRIGHT"
