@@ -6,6 +6,7 @@ http://www.rsnapshot.org/
 VERSION 1.2.1 (??? ?? ??:?? 2005)
 ------------------------------------------------------------------------------
 - David Cantrell <david@cantrell.org.uk> wrote the rsnapshot-diff utility
+- Chris Petersen added cwrsync permanent-share support
 
 VERSION 1.2.0 (Jan 31 21:43 2005)
 ------------------------------------------------------------------------------
